k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimatum-ingress
  namespace: uptimatum
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /badge
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /doc
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /reference
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
